frontend/static/css/index.css
/* ... */
#home__linebox-top,
#home__linebox-bottom {
  width: 100%;
  height: var(--box-line-width);
  left: 0;
  z-index: 100;
}

#home__linebox-right,
#home__linebox-left {
  width: var(--box-line-width);
  height: 100%;
  top: 0;
  z-index: 100;
}

#home__linebox-top {
  top: 0;
}

#home__linebox-right {
  right: 0
}

#home__linebox-bottom {
  bottom: 0;
}

#home__linebox-left {
  left: 0
}

.home__heading-container {
  color: white;
  position: fixed;
  bottom: max(20px, 2.5vmin);
  width: fit-content;
  z-index: 10;
  padding: 0 0.5rem 1rem 3.2rem;
  display: flex;
  flex-direction: row;
  align-items: flex-end;
  justify-content: flex-start;
}

.home__heading-container h1 {
  font-size: 6rem; 
  line-height: 1;
  font-weight: 100;
  letter-spacing: 0.04rem;
  /* color: var(--neon-green); */
  color:white;
}

.home__heading-container h2 {
  font-size: 1.5rem; 
  font-weight: 100;
  padding: 0 0 0.48rem 1rem;
  letter-spacing: var(--wide);
}


.home__heading-container h1,
.home__heading-container h2 {
  margin: 0;
}

/* PROJECTS page */
.page__projects {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.projects__categories-container {
  display: flex;
  justify-content: start;
  align-items: center;
}

#projects__content-container {
  z-index: 10;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 50px;
  max-width: 1300px;
  width: 80vw;
}

.projects__category-input {
  display: none;
}

.projects__category-label {
  transition-property: all;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  font-size: 16.3px;
  letter-spacing: var(--wider); 
  line-height: 1.5rem;
  text-transform: uppercase;
  margin: 0 1rem 0 0.25rem;
  opacity: 0.6;
  font-weight: 200;
  cursor: pointer;
  border-bottom: 1px transparent solid;
  box-sizing: border-box;
  color: white;
}

input:checked + label {
  color: white;
  opacity: 1;
  border-bottom: 1px white solid;
  letter-spacing: var(--wider); 
}

.projects__category-label:hover {
  opacity: 1;
}

.project__container {
  width: 100%;
  max-width: 1300px;
  display: flex;
  flex-direction: column;
}

.project__content-container {
  display: flex;
  align-items: flex-start;
  cursor: pointer;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  width: 100%;
  min-height: 275px;
  border: 1px white;
  margin-bottom: 1rem;
}

.project__content-container:hover {
  transform: scale(1.02);
}

.project__image-container {
  border-radius: 0.125rem;
  width: var(--one-third);
  min-width: 300px;
  max-width: 384px;
}

.project__image {
  width: 100%;
  cursor: pointer;
}

.project__text-container {
  height: 100%;
  width: 66%;
  margin: 0 0 0 2rem;
  color: white;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.project__text-container h2 {
  font-weight: 300;
  font-size: 1.875rem;
  margin: 0;
  line-height: 36px;
  letter-spacing: var(--wide);
}

#project__featured-icon {
  width: 1rem;
  height: 1rem;
  margin: 0.25rem 0 0 0.5rem;
}

.project__text-container h3 {
  margin-bottom: 1rem;
  font-weight: 300;
  font-size: 16.3px;
  text-transform: uppercase;
  opacity: 0.8;
  margin: 0 0 16px 0;
  line-height: 24px;
  letter-spacing: var(--wide);
}

.project__text-description {
  color: white;
  font-size: 16.3px;
  font-weight: 200;
  margin: 0;
  line-height: 24px;
  letter-spacing: var(--wide);
}

.project__builtWith-item {
  font-weight: 300;
  border-bottom: 1px white solid;
}

.icon__star {
  width: 1rem;
  height: 1rem;
  margin: 0.25rem 0 0 0.5rem;
}

.project__buttons-container {
  margin-top: 2rem;
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
}

.project__button {
  border-radius: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: var(--wide);
  width: 5.5rem;
  height: 2.8rem;
  margin-right: 1.5rem;
  background-color: var(--button-gray);
  color: black;
  border: 1px white solid;
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
}

.project__button:hover {
  cursor: pointer;
  background-color: var(--button-hover-gray);
  border: 1px transparent solid;
  color: white;
  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
}

.project__button-disabled {
  background-color: #7e7f81;
  color: #424242;
  border: 1px #717375 solid;
  cursor: default;
  border-radius: 0.125rem;
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: var(--wide);
  width: 5.5rem;
  height: 2.8rem;
  margin-right: 1.5rem;
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
}

.project__line-bottom {
  height: 1px;
  background-color: white;
  max-width: 1300px;
  width: 100%;
  margin: 3rem 0;
  opacity: 0.2;
}

/* ABOUT page */

.page__about img {
  max-width: 400px;
}

.page__bottom {
  margin-bottom: 18rem;
}

.work-date-range {
  font-size: 0.9rem;
  opacity: 0.75;
}

.about__section-work-header {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.about__section-work-header a {
  padding-top: 0.25rem;
  padding-left: 0.75rem;
  color: white;
  text-decoration: none;
}

.about__section-work-buttons {
  display: flex;
  justify-content: flex-end;
  align-items: flex-end;
}

.page__about {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}
/* ... */

